Fix spacing

--- a/client/src/layout/components/hodler.sass
+++ b/client/src/layout/components/hodler.sass
@@ -8,7 +8,7 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  height: 80vh
+  height: 100vh
   width: 100%
   z-index: -1
 
